style.css
body {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  line-height: 1;
}

textarea {
  background: transparent;
  border: none;
  resize: none;
  color: #000000;
  border-left: 1px solid black;
  padding: 10px;
  border: 1px solid #000000;
}

header {
  text-align: center;
  background-color: transparent;
  color: black;
  border-radius: 0;
  border-bottom: 10px solid black;
  padding: 40px;
}

.description {
  white-space: pre-wrap;
}

.time-block {
  text-align: center;
  border-radius: 15px;
}

.row {
  white-space: pre-wrap;
  height: 100px;
  border-top: 1px solid white;
  margin-top: 4px;
}

.hour {
  background-color: #ffffff;
  color: #000000;
  line-height: 100px;
  border-bottom-left-radius: 15px;
  border: 1px solid #000000;
}

.past {
  background-color: #d3d3d3;
  color: white;
}

.present {
  background-color: #ff6961;
  color: white;
}

.future {
  background-color: #77dd77;
  color: white;
}

.saveBtn {
  border-top-right-radius: 15px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  background-color: #06aed5;
  color: white;
  display: grid;
  align-items: center;
}

.saveBtn i:hover {
  font-size: 20px;
  transition: all 0.3s ease-in-out;
}

#saveMessage {
  color: darkgreen;
  font-weight: bold;
  height: 20px;
}

